cmake_minimum_required(VERSION 3.10)
project(examples)

set(CMAKE_CXX_STANDARD 11)

add_executable(interprocess_01 interprocess_01/main.cpp)
add_executable(interprocess_02 interprocess_02/main.cpp)
add_executable(interprocess_03 interprocess_03/main.cpp)
add_executable(interprocess_04 interprocess_04/main.cpp)
add_executable(interprocess_05 interprocess_05/main.cpp)
add_executable(interprocess_06 interprocess_06/main.cpp)
add_executable(interprocess_07 interprocess_07/main.cpp)
add_executable(interprocess_08 interprocess_08/main.cpp)
add_executable(interprocess_09 interprocess_09/main.cpp)
add_executable(interprocess_10 interprocess_10/main.cpp)
add_executable(interprocess_11 interprocess_11/main.cpp)
add_executable(interprocess_12 interprocess_12/main.cpp)
add_executable(interprocess_13 interprocess_13/main.cpp)
add_executable(interprocess_14 interprocess_14/main.cpp)
add_executable(interprocess_15 interprocess_15/main.cpp)

#[[add_executable(examples
        accumulators_01/main.cpp
        accumulators_02/main.cpp
        accumulators_03/main.cpp
        algorithm_01/main.cpp
        algorithm_02/main.cpp
        algorithm_03/main.cpp
        algorithm_04/main.cpp
        any_01/main.cpp
        any_02/main.cpp
        any_03/main.cpp
        any_04/main.cpp
        any_05/main.cpp
        any_06/main.cpp
        array_01/main.cpp
        asio_01/main.cpp
        asio_02/main.cpp
        asio_03/main.cpp
        asio_04/main.cpp
        asio_05/main.cpp
        asio_06/main.cpp
        asio_07/main.cpp
        asio_08/main.cpp
        asio_09/main.cpp
        asio_10/main.cpp
        assign_01/main.cpp
        assign_02/main.cpp
        atomic_01/main.cpp
        atomic_02/main.cpp
        atomic_03/main.cpp
        atomic_04/main.cpp
        atomic_05/main.cpp
        bimap_01/main.cpp
        bimap_02/main.cpp
        bimap_03/main.cpp
        bimap_04/main.cpp
        bimap_05/main.cpp
        bind_01/main.cpp
        bind_02/main.cpp
        bind_03/main.cpp
        bind_04/main.cpp
        bind_05/main.cpp
        chrono_01/main.cpp
        chrono_02/main.cpp
        chrono_03/main.cpp
        chrono_04/main.cpp
        chrono_05/main.cpp
        chrono_06/main.cpp
        circularbuffer_01/main.cpp
        circularbuffer_02/main.cpp
        compressedpair_01/main.cpp
        container_01/main.cpp
        container_02/main.cpp
        conversion_01/main.cpp
        conversion_02/main.cpp
        coroutine_01/main.cpp
        coroutine_02/main.cpp
        coroutine_03/main.cpp
        coroutine_04/main.cpp
        datetime_01/main.cpp
        datetime_02/main.cpp
        datetime_03/main.cpp
        datetime_04/main.cpp
        datetime_05/main.cpp
        datetime_06/main.cpp
        datetime_07/main.cpp
        datetime_08/main.cpp
        datetime_09/main.cpp
        datetime_10/main.cpp
        datetime_11/main.cpp
        datetime_12/main.cpp
        datetime_13/main.cpp
        datetime_14/main.cpp
        datetime_15/main.cpp
        datetime_16/main.cpp
        datetime_17/main.cpp
        datetime_18/main.cpp
        datetime_19/main.cpp
        datetime_20/main.cpp
        datetime_21/main.cpp
        dynamicbitset_01/main.cpp
        enableif_01/main.cpp
        enableif_02/main.cpp
        exception_01/main.cpp
        exception_02/main.cpp
        exception_03/main.cpp
        filesystem_01/main.cpp
        filesystem_02/main.cpp
        filesystem_03/main.cpp
        filesystem_04/main.cpp
        filesystem_05/main.cpp
        filesystem_06/main.cpp
        filesystem_07/main.cpp
        filesystem_08/main.cpp
        filesystem_09/main.cpp
        filesystem_10/main.cpp
        filesystem_11/main.cpp
        filesystem_12/main.cpp
        filesystem_13/main.cpp
        filesystem_14/main.cpp
        filesystem_15/main.cpp
        filesystem_16/main.cpp
        filesystem_17/main.cpp
        filesystem_18/main.cpp
        filesystem_19/main.cpp
        flyweight_01/main.cpp
        flyweight_02/main.cpp
        flyweight_03/main.cpp
        flyweight_04/main.cpp
        flyweight_05/main.cpp
        foreach_01/main.cpp
        format_01/main.cpp
        format_02/main.cpp
        format_03/main.cpp
        format_04/main.cpp
        format_05/main.cpp
        format_06/main.cpp
        format_07/main.cpp
        format_08/main.cpp
        format_09/main.cpp
        function_01/main.cpp
        function_02/main.cpp
        function_03/main.cpp
        fusion_01/main.cpp
        fusion_02/main.cpp
        fusion_03/main.cpp
        fusion_04/main.cpp
        fusion_05/main.cpp
        fusion_06/main.cpp
        fusion_07/main.cpp
        fusion_08/main.cpp
        graph_01/main.cpp
        graph_02/main.cpp
        graph_03/main.cpp
        graph_04/main.cpp
        graph_05/main.cpp
        graph_06/main.cpp
        graph_07/main.cpp
        graph_08/main.cpp
        graph_09/main.cpp
        graph_10/main.cpp
        graph_11/main.cpp
        graph_12/main.cpp
        graph_13/main.cpp
        graph_14/main.cpp
        graph_15/main.cpp
        graph_16/main.cpp
        heap_01/main.cpp
        heap_02/main.cpp
        heap_03/main.cpp
        integer_01/main.cpp
        integer_02/main.cpp
        interprocess_01/main.cpp
        interprocess_02/main.cpp
        interprocess_03/main.cpp
        interprocess_04/main.cpp
        interprocess_05/main.cpp
        interprocess_06/main.cpp
        interprocess_07/main.cpp
        interprocess_08/main.cpp
        interprocess_09/main.cpp
        interprocess_10/main.cpp
        interprocess_11/main.cpp
        interprocess_12/main.cpp
        interprocess_13/main.cpp
        interprocess_14/main.cpp
        interprocess_15/main.cpp
        intrusive_01/main.cpp
        intrusive_02/main.cpp
        intrusive_03/main.cpp
        intrusive_04/main.cpp
        intrusive_05/main.cpp
        iostreams_01/main.cpp
        iostreams_02/main.cpp
        iostreams_03/main.cpp
        iostreams_04/main.cpp
        iostreams_05/main.cpp
        iostreams_06/main.cpp
        iostreams_07/main.cpp
        iostreams_08/main.cpp
        lambda_01/main.cpp
        lambda_02/main.cpp
        lexical_cast_01/main.cpp
        lexical_cast_02/main.cpp
        lockfree_01/main.cpp
        lockfree_02/main.cpp
        lockfree_03/main.cpp
        lockfree_04/main.cpp
        log_01/main.cpp
        log_02/main.cpp
        log_03/main.cpp
        log_04/main.cpp
        log_05/main.cpp
        log_06/main.cpp
        log_07/main.cpp
        log_08/main.cpp
        log_09/main.cpp
        log_10/main.cpp
        metastatemachine_01/main.cpp
        metastatemachine_02/main.cpp
        metastatemachine_03/main.cpp
        metastatemachine_04/main.cpp
        metastatemachine_05/main.cpp
        metastatemachine_06/main.cpp
        minmax_01/main.cpp
        minmax_02/main.cpp
        mpi_01/main.cpp
        mpi_02/main.cpp
        mpi_03/main.cpp
        mpi_04/main.cpp
        mpi_05/main.cpp
        mpi_06/main.cpp
        mpi_07/main.cpp
        mpi_08/main.cpp
        mpi_09/main.cpp
        mpi_10/main.cpp
        mpi_11/main.cpp
        mpi_12/main.cpp
        mpi_13/main.cpp
        mpi_14/main.cpp
        mpi_15/main.cpp
        mpi_16/main.cpp
        multiarray_01/main.cpp
        multiarray_02/main.cpp
        multiarray_03/main.cpp
        multiindex_01/main.cpp
        multiindex_02/main.cpp
        multiindex_03/main.cpp
        multiindex_04/main.cpp
        multiindex_05/main.cpp
        numeric_conversion_01/main.cpp
        numeric_conversion_02/main.cpp
        numeric_conversion_03/main.cpp
        operators_01/main.cpp
        optional_01/main.cpp
        optional_02/main.cpp
        optional_03/main.cpp
        optional_04/main.cpp
        parameter_01/main.cpp
        parameter_02/main.cpp
        parameter_03/main.cpp
        parameter_04/main.cpp
        phoenix_01/main.cpp
        phoenix_02/main.cpp
        phoenix_03/main.cpp
        phoenix_04/main.cpp
        phoenix_05/main.cpp
        phoenix_06/main.cpp
        phoenix_07/main.cpp
        phoenix_08/main.cpp
        phoenix_09/main.cpp
        pool_01/main.cpp
        pool_02/main.cpp
        pool_03/main.cpp
        pool_04/main.cpp
        pool_05/main.cpp
        pool_06/main.cpp
        program_options_01/main.cpp
        program_options_02/main.cpp
        program_options_03/main.cpp
        program_options_04/main.cpp
        propertytree_01/main.cpp
        propertytree_02/main.cpp
        propertytree_03/main.cpp
        propertytree_04/main.cpp
        propertytree_05/main.cpp
        ptr_container_01/main.cpp
        ptr_container_02/main.cpp
        ptr_container_03/main.cpp
        random_01/main.cpp
        random_02/main.cpp
        random_03/main.cpp
        random_04/main.cpp
        range_01/main.cpp
        range_02/main.cpp
        range_03/main.cpp
        range_04/main.cpp
        range_05/main.cpp
        range_06/main.cpp
        range_07/main.cpp
        range_08/main.cpp
        range_09/main.cpp
        ref_01/main.cpp
        regex_01/main.cpp
        regex_02/main.cpp
        regex_03/main.cpp
        regex_04/main.cpp
        regex_05/main.cpp
        regex_06/main.cpp
        regex_07/main.cpp
        regex_08/main.cpp
        scopeexit_01/main.cpp
        scopeexit_02/main.cpp
        scopeexit_03/main.cpp
        serialization_01/main.cpp
        serialization_02/main.cpp
        serialization_03/main.cpp
        serialization_04/main.cpp
        serialization_05/main.cpp
        serialization_06/main.cpp
        serialization_07/main.cpp
        serialization_08/main.cpp
        serialization_09/main.cpp
        serialization_10/main.cpp
        serialization_11/main.cpp
        serialization_12/main.cpp
        serialization_13/main.cpp
        serialization_14/main.cpp
        serialization_15/main.cpp
        signals2_01/main.cpp
        signals2_02/main.cpp
        signals2_03/main.cpp
        signals2_04/main.cpp
        signals2_05/main.cpp
        signals2_06/main.cpp
        signals2_07/main.cpp
        signals2_08/main.cpp
        signals2_09/main.cpp
        signals2_10/main.cpp
        signals2_11/main.cpp
        signals2_12/main.cpp
        signals2_13/main.cpp
        signals2_14/main.cpp
        signals2_15/main.cpp
        signals2_16/main.cpp
        signals2_17/main.cpp
        signals2_18/main.cpp
        smartpointers_01/main.cpp
        smartpointers_02/main.cpp
        smartpointers_03/main.cpp
        smartpointers_04/main.cpp
        smartpointers_05/main.cpp
        smartpointers_06/main.cpp
        smartpointers_07/main.cpp
        smartpointers_08/main.cpp
        smartpointers_09/main.cpp
        spirit_01/main.cpp
        spirit_02/main.cpp
        spirit_03/main.cpp
        spirit_04/main.cpp
        spirit_05/main.cpp
        spirit_06/main.cpp
        spirit_07/main.cpp
        spirit_08/main.cpp
        spirit_09/main.cpp
        spirit_10/main.cpp
        spirit_11/main.cpp
        spirit_12/main.cpp
        spirit_13/main.cpp
        spirit_14/main.cpp
        spirit_15/main.cpp
        spirit_16/main.cpp
        stringalgorithms_01/main.cpp
        stringalgorithms_02/main.cpp
        stringalgorithms_03/main.cpp
        stringalgorithms_04/main.cpp
        stringalgorithms_05/main.cpp
        stringalgorithms_06/main.cpp
        stringalgorithms_07/main.cpp
        stringalgorithms_08/main.cpp
        stringalgorithms_09/main.cpp
        stringalgorithms_10/main.cpp
        stringalgorithms_11/main.cpp
        stringalgorithms_12/main.cpp
        swap_01/main.cpp
        system_01/main.cpp
        system_02/main.cpp
        system_03/main.cpp
        system_04/main.cpp
        system_05/main.cpp
        thread_01/main.cpp
        thread_02/main.cpp
        thread_03/main.cpp
        thread_04/main.cpp
        thread_05/main.cpp
        thread_06/main.cpp
        thread_07/main.cpp
        thread_08/main.cpp
        thread_09/main.cpp
        thread_10/main.cpp
        thread_11/main.cpp
        thread_12/main.cpp
        thread_13/main.cpp
        thread_14/main.cpp
        thread_15/main.cpp
        thread_16/main.cpp
        timer_01/main.cpp
        timer_02/main.cpp
        timer_03/main.cpp
        timer_04/main.cpp
        tokenizer_01/main.cpp
        tokenizer_02/main.cpp
        tokenizer_03/main.cpp
        tokenizer_04/main.cpp
        tokenizer_05/main.cpp
        tokenizer_06/main.cpp
        tokenizer_07/main.cpp
        tribool_01/main.cpp
        tribool_02/main.cpp
        tuple_01/main.cpp
        tuple_02/main.cpp
        tuple_03/main.cpp
        tuple_04/main.cpp
        tuple_05/main.cpp
        tuple_06/main.cpp
        tuple_07/main.cpp
        tuple_08/main.cpp
        tuple_09/main.cpp
        tuple_10/main.cpp
        typetraits_01/main.cpp
        typetraits_02/main.cpp
        typetraits_03/main.cpp
        typetraits_04/main.cpp
        unordered_01/main.cpp
        unordered_02/main.cpp
        unordered_03/main.cpp
        utility_01/main.cpp
        utility_02/main.cpp
        utility_03/main.cpp
        utility_04/main.cpp
        utility_05/main.cpp
        utility_06/main.cpp
        utility_07/main.cpp
        uuid_01/main.cpp
        uuid_02/main.cpp
        uuid_03/main.cpp
        uuid_04/main.cpp
        variant_01/main.cpp
        variant_02/main.cpp
        variant_03/main.cpp
        variant_04/main.cpp
        variant_05/main.cpp
        xpressive_01/main.cpp
        xpressive_02/main.cpp
        xpressive_03/main.cpp
        xpressive_04/main.cpp)]]
